Reworked infobox, started with suchleiste

--- a/src/app/components/main-page/suchleiste/suchleiste.component.css
+++ b/src/app/components/main-page/suchleiste/suchleiste.component.css
@@ -42,7 +42,7 @@ display: none;
   background-color: rgba(0, 0, 0, 0.0);
   color: white;
   border-color: rgba(0, 0, 0, 0.0);
-  outline: none /*das hier noch auskommentieren -Serag*/
+  /*outline: none*/ /*das hier noch auskommentieren -Serag*/
 }
 
 .form-row-style {
