fixed bug of horizontal an vertical list -> choose betwenn both

--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -43,7 +43,7 @@
   <div class="" style="height: 40vh">
     <h3 class="h3 font-weight-bold logoGreenDark ml-3">Du fährst</h3>
     <div>
-      <app-tour-list [usedList]="ownOffers"></app-tour-list>
+      <app-tour-list [isHorizontal]="isHorizontal" [usedList]="ownOffers"></app-tour-list>
       <div class="container">
         <div class="row">
           <div *ngIf="ownOffers.length === 0" class="card col-7 border-0 mb-3" style="max-width: 600px; height: 25vh">
@@ -59,7 +59,7 @@
   <div class="" style="height: 40vh">
     <h3 class="h3 font-weight-bold logoGreenDark ml-3">Du wirst mitgenommen</h3>
     <div>
-      <app-tour-list [usedList]="passengerTours"></app-tour-list>
+      <app-tour-list [isHorizontal]="isHorizontal" [usedList]="passengerTours"></app-tour-list>
       <div class="container">
         <div class="row">
           <div *ngIf="passengerTours.length === 0" class="card col-7 border-0 mb-3" style="max-width: 600px; height: 25vh">
