--- a/src/app/components/tour-list/tour-list.component.html
+++ b/src/app/components/tour-list/tour-list.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid d-flex">
+<div *ngIf="isHorizontal" class="container-fluid d-flex">
   <div class="row flex-row flex-nowrap scrolling-wrapper">
     <div class="col-7" *ngFor="let tour of usedList; let i = index">
       <app-tour-card [tour]="tour"></app-tour-card>
@@ -6,3 +6,13 @@
   </div>
 </div>
 <div style="height: 50px"></div>
+
+<div *ngIf="!isHorizontal" class="container-fluid">
+  <div class="row">
+    <div class="col-12" *ngFor="let tour of usedList; let i = index">
+      <app-tour-card [tour]="tour"></app-tour-card>
+    </div>
+  </div>
+</div>
+<div style="height: 50px"></div>
+
