--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -29,6 +29,10 @@
   </div>
 
   <div class="mt-3">
+    <button class=" logoGreenMedium" (click)="openMoneyModal()">Guthaben aufladen</button>
+  </div>
+
+  <div class="mt-3">
     <button class=" logoGreenMedium" (click)="logout()">Logout</button>
   </div>
 
