--- a/src/app/components/profil/loggedin/loggedin.component.css
+++ b/src/app/components/profil/loggedin/loggedin.component.css
@@ -25,3 +25,57 @@ button{
   z-index: -1;
 }
 
+.flex {
+  display: flex;
+}
+
+.column {
+  flex-flow: column;
+}
+
+.profile {
+  min-width: 25%;
+  max-width: 25%;
+  background-color: #F3FBED;
+}
+
+/* Tests */
+/*
+
+.scrollmenu {
+  overflow: auto !important;
+  white-space: nowrap;
+}
+
+.scrollmenu div {
+  display: inline-block;
+  padding: 14px;
+  float: none;
+}
+
+
+.test > .row {
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+.test > .row > .col-4 {
+  display: inline-block;
+}
+
+.width {
+  width: 100em;
+}
+
+.test > .row > .inline {
+  display: inline-block;
+}
+
+.test {
+  margin-left: 0;
+  margin-bottom: 0;
+  margin-top: 0;
+  margin-right: 0;
+}
+*/
