added list of open Tours, added text-color

--- a/src/app/components/stranger-profile/stranger-profile.component.html
+++ b/src/app/components/stranger-profile/stranger-profile.component.html
@@ -8,22 +8,22 @@
     </div>
 
     <div class="d-inline-flex flex-column">
-      <div class="h5">{{this.username}}</div>
-      <div class=""><span>{{this.firstname}}</span> <span>{{this.lastname}}</span></div>
-      <div class="">{{this.age}}</div>
-      <div class="">{{this.gender}}</div>
-      <div class="" *ngIf="this.evaluation !== -1; else noEval">{{this.evaluation}}</div>
-      <ng-template #noEval class="">Not evaluated yet</ng-template>
+      <div class="h5 logoGreenDark">{{this.username}}</div>
+      <div class="logoGreenDark"><span>{{this.firstname}}</span> <span>{{this.lastname}}</span></div>
+      <div class="logoGreenDark">{{this.age}}</div>
+      <div class="logoGreenDark">{{this.gender}}</div>
+      <div class="logoGreenDark" *ngIf="this.evaluation !== -1; else noEval">{{this.evaluation}}</div>
+      <ng-template #noEval class="logoGreenDark">Not evaluated yet</ng-template>
     </div>
 
   </div>
 
   <div class="d-inline-flex flex-column m-5">
-    <div class="h5">Statistik</div>
-    <div class="">Ausgeführte Fahrten: 2</div>
-    <div class="">Mitgefahren: 3</div>
-    <div class="">Offene Fahrten: 4</div>
-    <div class="">Offene Anfragen: 5</div>
+    <div class="h5 logoGreenDark">Statistik</div>
+    <div class="logoGreenDark">Ausgeführte Fahrten: 2</div>
+    <div class="logoGreenDark">Mitgefahren: 3</div>
+    <div class="logoGreenDark">Offene Fahrten: 4</div>
+    <div class="logoGreenDark">Offene Anfragen: 5</div>
   </div>
 </div>
 
@@ -36,43 +36,7 @@
     <h2 class="logoGreenDark">Seine Angebote</h2>
   </div>
 
-  <div class="container-fluid">
-    <div class="row flex-row flex-nowrap scrolling-wrapper">
-      <div class="col-4">
-        <app-tour-card></app-tour-card>
-
-      </div>
-      <div class="col-6">
-        <app-tour-card></app-tour-card>
-
-      </div>
-      <div class="col-6">
-        <app-tour-card></app-tour-card>
-
-      </div>
-      <div class="col-6">
-        <app-tour-card></app-tour-card>
-
-      </div>
-      <div class="col-6">
-        <app-tour-card></app-tour-card>
-
-      </div>
-      <div class="col-6">
-        <app-tour-card></app-tour-card>
-
-      </div>
-      <div class="col-6">
-        <app-tour-card></app-tour-card>
-
-      </div>
-      <div class="col-6">
-        <app-tour-card></app-tour-card>
-
-      </div>
-    </div>
-  </div>
-
+  <app-tour-list [isHorizontal]="true" [usedList]="offerTours"></app-tour-list>
 
 </div>
 
@@ -85,43 +49,7 @@
     <h2 class="logoGreenDark">Seine Anfragen</h2>
   </div>
 
-  <div class="container-fluid">
-    <div class="row flex-row flex-nowrap scrolling-wrapper">
-      <div class="col-4">
-        <app-tour-card></app-tour-card>
-
-      </div>
-      <div class="col-6">
-        <app-tour-card></app-tour-card>
-
-      </div>
-      <div class="col-6">
-        <app-tour-card></app-tour-card>
-
-      </div>
-      <div class="col-6">
-        <app-tour-card></app-tour-card>
-
-      </div>
-      <div class="col-6">
-        <app-tour-card></app-tour-card>
-
-      </div>
-      <div class="col-6">
-        <app-tour-card></app-tour-card>
-
-      </div>
-      <div class="col-6">
-        <app-tour-card></app-tour-card>
-
-      </div>
-      <div class="col-6">
-        <app-tour-card></app-tour-card>
-
-      </div>
-    </div>
-  </div>
-
+  <app-tour-list [isHorizontal]="true" [usedList]="noOfferTours"></app-tour-list>
 
 </div>
 
