delete button hinfügen

--- a/src/app/components/add-money/add-money.component.html
+++ b/src/app/components/add-money/add-money.component.html
@@ -1,6 +1,6 @@
 <!--  Modal Header -->
 <div class="modal-header modal-lg border-0">
-  <div class="container">
+  <div class="container form-controll">
     <div class="row">
       <div class="col-6"></div>
       <div class="col-12 justify-content-center">
@@ -10,7 +10,7 @@
       <div class="col-1 p-0">
         <button type="button" class="close logoGreenDark" aria-label="Close" style="position: absolute"
                 (click)="activeModal.dismiss()">
-          <span aria-hidden="true">&times;</span>
+          <span class="btn btn-primary btn-danger ml-1" aria-hidden="true">&times;</span>
         </button>
       </div>
 
