--- a/src/app/components/add-money/add-money.component.html
+++ b/src/app/components/add-money/add-money.component.html
@@ -1,7 +1,7 @@
 <!--  Modal Header -->
 <div class="modal-header modal-lg border-0">
-  <div class="container form-controll">
-    <div class="row">
+  <div class="container">
+    <div class="row ">
       <div class="col-6"></div>
       <div class="col-12 justify-content-center">
         <div class="modal-title text-center h4 mx-auto logoGreenDark">Geld aufladen</div>
@@ -10,7 +10,7 @@
       <div class="col-1 p-0">
         <button type="button" class="close logoGreenDark" aria-label="Close" style="position: absolute"
                 (click)="activeModal.dismiss()">
-          <span class="btn btn-primary btn-danger ml-1" aria-hidden="true">&times;</span>
+          <span class="btn btn-primary btn-danger ml-1 justify-content-center" aria-hidden="true">&times;</span>
         </button>
       </div>
 
@@ -22,22 +22,31 @@
 <!--  Modal Body  -->
 <div class="modal-body border-0">
 
-    <div class="d-flex justify-content-between">
-
+  <div class="container form-controll">
+    <div class="row m-2">
+      <div class="col-6">
           <button>
             <app-load-money-button [amount]="smallAmount"></app-load-money-button>
           </button>
-
+      </div>
+      <div class="col-6">
           <button>
             <app-load-money-button [amount]="midAmount"></app-load-money-button>
           </button>
+      </div>
+    </div>
+    <div class="row m-2">
+      <div class="col-6">
+        <button>
+          <app-load-money-button [amount]="bigAmount"></app-load-money-button>
+        </button>
+      </div>
+      <div class="col-6">
+        <button>
+          <app-load-money-button [amount]="hugeAmount"></app-load-money-button>
+        </button>
+      </div>
+    </div>
 
-          <button>
-            <app-load-money-button [amount]="bigAmount"></app-load-money-button>
-          </button>
-
-          <button>
-            <app-load-money-button [amount]="hugeAmount"></app-load-money-button>
-          </button>
       </div>
 </div>
