--- a/src/app/components/add-money/add-money.component.css
+++ b/src/app/components/add-money/add-money.component.css
@@ -1,3 +1,4 @@
+/*
 .form-controll{
 
 
@@ -5,3 +6,4 @@
   -moz-box-shadow: -2px 0px 71px 25px rgba(29,66,26,1);
   box-shadow: -2px 0px 71px 25px rgba(29,66,26,1);
 }
+*/
