--- a/src/app/components/add-money/load-money-button/load-money-button.component.html
+++ b/src/app/components/add-money/load-money-button/load-money-button.component.html
@@ -1,6 +1,15 @@
-<div class="buttonSize">
-  <div class="shadow p-3 mb-5 bg-white rounded infoheight" style="margin: 2em; margin-top: 5em">
-    <img src="../../../../assets/img/Icons/money_icon.png" class="infoicon"/>
-    <h3 style="color: #005B51; text-align: center">{{amount}}</h3>
+
+<div class="container shadow bg-white rounded cursor" (click)="chosedMe(amount)">
+  <div class="row">
+    <div class="col">
+      <img src="../../../../assets/img/Icons/money_icon.png" alt="money" class="infoicon"/>
+    </div>
+  </div>
+
+  <div class="row flex align-items-center">
+    <div class="col">
+      <h3 style="color: #005B51; text-align: center">{{amount}}€</h3>
+    </div>
   </div>
 </div>
+
