--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -1,5 +1,5 @@
-
-<div class="d-inline-flex justify-content-around flex-column align-items-center" *ngIf="this.userData.currUser" style="width: 25%; background-color: #F3FBED">
+<div class="d-inline-flex justify-content-around flex-column align-items-center" *ngIf="this.userData.currUser"
+  style="width: 25%; background-color: #F3FBED">
 
   <!--    Items-->
   <div class="mt-3">
@@ -11,13 +11,18 @@
   <div class="mt-3">
     <svg xmlns="http://www.w3.org/2000/svg" width="10em" viewBox="0 0 240 240">
       <path id="ic_account_circle_24px"
-            d="M122,2A120,120,0,1,0,242,122,120.044,120.044,0,0,0,122,2Zm0,36A36,36,0,1,1,86,74,35.952,35.952,0,0,1,122,38Zm0,170.4a86.406,86.406,0,0,1-72-38.64c.36-23.88,48-36.96,72-36.96,23.88,0,71.64,13.08,72,36.96A86.407,86.407,0,0,1,122,208.4Z"
-            transform="translate(-2 -2)" fill="#208479"/>
+        d="M122,2A120,120,0,1,0,242,122,120.044,120.044,0,0,0,122,2Zm0,36A36,36,0,1,1,86,74,35.952,35.952,0,0,1,122,38Zm0,170.4a86.406,86.406,0,0,1-72-38.64c.36-23.88,48-36.96,72-36.96,23.88,0,71.64,13.08,72,36.96A86.407,86.407,0,0,1,122,208.4Z"
+        transform="translate(-2 -2)" fill="#208479" />
     </svg>
   </div>
 
   <div class="mt-3">
-    <ngb-rating [(rate)]="currentRate" [readonly]="true" [max]="5"></ngb-rating>
+    <ngb-rating [(rate)]="currentRate" [starTemplate]="t" [readonly]="true" [max]="5"></ngb-rating>
+    <ng-template #t let-fill="fill">
+      <span class="star" [class.full]="fill === 100">
+        <span class="half" [style.width.%]="fill">&starf;</span>&starf;
+      </span>
+    </ng-template>
   </div>
 
   <div class="mt-3">
@@ -39,6 +44,7 @@
   <div class="mt-3">
     <button class=" red" (click)="deleteAccount()">Account löschen</button>
   </div>
+
 
 </div>
 
@@ -66,7 +72,8 @@
       <app-tour-list [isHorizontal]="isHorizontal" [usedList]="passengerTours"></app-tour-list>
       <div class="container">
         <div class="row">
-          <div *ngIf="passengerTours.length === 0" class="card col-7 border-0 mb-3" style="max-width: 600px; height: 25vh">
+          <div *ngIf="passengerTours.length === 0" class="card col-7 border-0 mb-3"
+            style="max-width: 600px; height: 25vh">
             <div class="card-body rounded shadow mt-4 bg-white border-0">
               <h4 class="h4 font-weight-bold logoGreenDark">Du hast noch keine Fahrten gebucht!</h4>
             </div>
