--- a/src/app/components/stranger-profile/stranger-profile.component.html
+++ b/src/app/components/stranger-profile/stranger-profile.component.html
@@ -9,7 +9,7 @@
 
     <div class="d-inline-flex flex-column">
       <div class="h5 logoGreenDark">{{this.username}}</div>
-      <div class="logoGreenDark"><span>{{this.firstname}}</span> <span>{{this.lastname}}</span></div>
+      <div class="logoGreenDark"><span class="mr-1">{{this.firstname}}</span> <span>{{this.lastname}}</span></div>
       <div class="logoGreenDark">{{this.age}}</div>
       <div class="logoGreenDark">{{this.gender}}</div>
       <div class="logoGreenDark" *ngIf="this.evaluation !== -1; else noEval">{{this.evaluation}}</div>
@@ -20,10 +20,10 @@
 
   <div class="d-inline-flex flex-column m-5">
     <div class="h5 logoGreenDark">Statistik</div>
-    <div class="logoGreenDark">Ausgeführte Fahrten: 2</div>
-    <div class="logoGreenDark">Mitgefahren: 3</div>
-    <div class="logoGreenDark">Offene Fahrten: 4</div>
-    <div class="logoGreenDark">Offene Anfragen: 5</div>
+    <div class="logoGreenDark">Ausgeführte Fahrten: {{this.executedTours()}}</div>
+    <div class="logoGreenDark">Mitgefahren: {{this.goneWithNumber}}</div>
+    <div class="logoGreenDark">Offene Fahrten: {{this.openOfferTours()}}</div>
+    <div class="logoGreenDark">Offene Anfragen: {{this.openNoOfferTours()}}</div>
   </div>
 </div>
 
@@ -36,7 +36,17 @@
     <h2 class="logoGreenDark">Seine Angebote</h2>
   </div>
 
-  <app-tour-list [isHorizontal]="true" [usedList]="offerTours"></app-tour-list>
+  <app-tour-list *ngIf="this.offerTours.length > 0; else noOffers" [isHorizontal]="true" [usedList]="offerTours"></app-tour-list>
+
+  <ng-template #noOffers>
+    <div class="container rounded shadow container bg-white border-0" style="width: 700px">
+      <div class="row">
+        <div class="col text-center mt-3 h2 logoGreenDark">
+          Melde dich an, um eine Tour zu erstellen!
+        </div>
+      </div>
+    </div>
+  </ng-template>
 
 </div>
 
@@ -49,7 +59,16 @@
     <h2 class="logoGreenDark">Seine Anfragen</h2>
   </div>
 
-  <app-tour-list [isHorizontal]="true" [usedList]="noOfferTours"></app-tour-list>
+  <app-tour-list *ngIf="this.noOfferTours.length > 0; else noNoOffers" [isHorizontal]="true" [usedList]="noOfferTours"></app-tour-list>
+  <ng-template #noNoOffers >
+    <div class="container rounded shadow container bg-white border-0" style="width: 700px">
+      <div class="row">
+        <div class="col text-center mt-3 h2 logoGreenDark">
+          Melde dich an, um eine Tour zu erstellen!
+        </div>
+      </div>
+    </div>
+  </ng-template>
 
 </div>
 
