--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -16,14 +16,7 @@
     </svg>
   </div>
 
-  <div class="mt-3">
-    <ngb-rating [(rate)]="currentRate" [starTemplate]="t" [readonly]="true" [max]="5"></ngb-rating>
-    <ng-template #t let-fill="fill">
-      <span class="star" [class.full]="fill === 100">
-        <span class="half" [style.width.%]="fill">&starf;</span>&starf;
-      </span>
-    </ng-template>
-  </div>
+  <app-vote-stars [currentRate]="currentRate"></app-vote-stars>
 
   <div class="mt-3">
     <button class=" logoGreenMedium" (click)="openUpdateModal()">Profil bearbeiten</button>
@@ -41,9 +34,6 @@
     <button class=" logoGreenMedium" (click)="logout()">Logout</button>
   </div>
 
-  <div class="mt-3">
-    <button class=" red" (click)="deleteAccount()">Account löschen</button>
-  </div>
 
 
 </div>
