WIP:KMSWS21T04-53 Initial commit, deleted line for registration purpose (#41)
* Initial commit, deleted line for registration purpose

* Implement the task <Bewertung bei abgeschlossenen Angeboten hinzufügen>

* Making a user's note display system a component

* merged master into current branch

* fixed code smell

Co-authored-by: Kevin <ornel.kevin.piam.talom@mni.thm.de>
Co-authored-by: TheSoniix <70700254+TheSoniix@users.noreply.github.com>

--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -23,9 +23,7 @@
       {{this.userData.currUser.money}}€
     </div>
 
-    <div class="mt-3">
-      <ngb-rating [(rate)]="currentRate" [readonly]="true" [max]="5"></ngb-rating>
-    </div>
+  <app-vote-stars [currentRate]="currentRate"></app-vote-stars>
 
     <div class="mt-3">
       <button class=" logoGreenMedium" (click)="openUpdateModal()">Profil bearbeiten</button>
