last changes and bug fixes

--- a/src/app/components/stranger-profile/stranger-profile.component.html
+++ b/src/app/components/stranger-profile/stranger-profile.component.html
@@ -12,8 +12,12 @@
       <div class="logoGreenDark"><span class="mr-1">{{this.firstname}}</span> <span>{{this.lastname}}</span></div>
       <div class="logoGreenDark">{{this.age}}</div>
       <div class="logoGreenDark">{{this.gender}}</div>
-      <div class="logoGreenDark" *ngIf="this.evaluation !== -1; else noEval">{{this.evaluation}}</div>
-      <ng-template #noEval class="logoGreenDark">Not evaluated yet</ng-template>
+      <app-vote-stars [currentRate]="this.evaluation"></app-vote-stars>
+      <div class="logoGreenDark">
+        <span *ngIf="this.evaluation !== -1">{{this.evaluation}} </span>
+        <span *ngIf="this.evaluation === -1">0 </span>
+        von {{this.evaluationCounter}} Nutzern
+      </div>
     </div>
 
   </div>
@@ -28,15 +32,15 @@
 </div>
 
 
-
 <div class="tours">
 
 
   <div class="">
-    <h2 class="logoGreenDark">Seine Angebote</h2>
+    <h2 class="logoGreenDark">{{this.username}}'s Angebote</h2>
   </div>
 
-  <app-tour-list *ngIf="this.offerTours.length > 0; else noOffers" [isHorizontal]="true" [usedList]="offerTours"></app-tour-list>
+  <app-tour-list *ngIf="this.offerTours.length > 0; else noOffers" [isHorizontal]="true"
+                 [usedList]="offerTours"></app-tour-list>
 
   <ng-template #noOffers>
     <div class="container rounded shadow container bg-white border-0" style="width: 700px">
@@ -51,16 +55,16 @@
 </div>
 
 
-
 <div class="tours">
 
 
   <div class="">
-    <h2 class="logoGreenDark">Seine Anfragen</h2>
+    <h2 class="logoGreenDark">{{this.username}}'s Anfragen</h2>
   </div>
 
-  <app-tour-list *ngIf="this.noOfferTours.length > 0; else noNoOffers" [isHorizontal]="true" [usedList]="noOfferTours"></app-tour-list>
-  <ng-template #noNoOffers >
+  <app-tour-list *ngIf="this.noOfferTours.length > 0; else noNoOffers" [isHorizontal]="true"
+                 [usedList]="noOfferTours"></app-tour-list>
+  <ng-template #noNoOffers>
     <div class="container rounded shadow container bg-white border-0" style="width: 700px">
       <div class="row">
         <div class="col text-center mt-3 h2 logoGreenDark">
