--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -1,48 +1,64 @@
 <div class="flex">
 
 
-  <div class="flex column profile align-items-center" *ngIf="this.userData.currUser">
+  <div class="flex column profile align-items-center justify-content-between" *ngIf="this.userData.currUser">
 
 
     <!--    Items-->
-    <div class="mt-3">
-      <h3 class="h3 font-weight-bold logoGreenDark">
-        {{this.userData.currUser.username}}
-      </h3>
+    <div class="flex column align-items-center">
+
+      <div class="mt-3">
+        <h3 class="h3 font-weight-bold logoGreenDark">
+          {{this.userData.currUser.username}}
+        </h3>
+      </div>
+
+      <div class="mt-3">
+        <svg xmlns="http://www.w3.org/2000/svg" width="10em" viewBox="0 0 240 240">
+          <path id="ic_account_circle_24px"
+                d="M122,2A120,120,0,1,0,242,122,120.044,120.044,0,0,0,122,2Zm0,36A36,36,0,1,1,86,74,35.952,35.952,0,0,1,122,38Zm0,170.4a86.406,86.406,0,0,1-72-38.64c.36-23.88,48-36.96,72-36.96,23.88,0,71.64,13.08,72,36.96A86.407,86.407,0,0,1,122,208.4Z"
+                transform="translate(-2 -2)" fill="#208479"/>
+        </svg>
+      </div>
+
+      <div class="mt-3 logoGreenDark">
+        {{this.userData.currUser.money}}€
+      </div>
+
+      <div class="mt-3">
+        <app-vote-stars [currentRate]="this.userData.currUser.evaluation"></app-vote-stars>
+      </div>
+
+      <div class="mt-1 logoGreenDark">
+        <span *ngIf="this.userData.currUser.evaluation !== -1">{{this.userData.currUser.evaluation}} </span>
+        <span *ngIf="this.userData.currUser.evaluation === -1">0 </span>
+        von {{this.userData.currUser.evaluationCounter}} Nutzern
+      </div>
+
     </div>
 
-    <div class="mt-3">
-      <svg xmlns="http://www.w3.org/2000/svg" width="10em" viewBox="0 0 240 240">
-        <path id="ic_account_circle_24px"
-              d="M122,2A120,120,0,1,0,242,122,120.044,120.044,0,0,0,122,2Zm0,36A36,36,0,1,1,86,74,35.952,35.952,0,0,1,122,38Zm0,170.4a86.406,86.406,0,0,1-72-38.64c.36-23.88,48-36.96,72-36.96,23.88,0,71.64,13.08,72,36.96A86.407,86.407,0,0,1,122,208.4Z"
-              transform="translate(-2 -2)" fill="#208479"/>
-      </svg>
-    </div>
 
-    <div class="mt-3 logoGreenDark">
-      {{this.userData.currUser.money}}€
-    </div>
+    <div class="flex column align-items-center">
 
-  <app-vote-stars [currentRate]="currentRate"></app-vote-stars>
+      <div class="mt-3">
+        <button class=" logoGreenMedium" (click)="openUpdateModal()">Profil bearbeiten</button>
+      </div>
 
-    <div class="mt-3">
-      <button class=" logoGreenMedium" (click)="openUpdateModal()">Profil bearbeiten</button>
-    </div>
+      <div class="mt-3">
+        <button class=" logoGreenMedium" (click)="navigateToCarList()">Fahrzeuge verwalten</button>
+      </div>
 
-    <div class="mt-3">
-      <button class=" logoGreenMedium" (click)="navigateToCarList()">Fahrzeuge verwalten</button>
-    </div>
+      <div class="mt-3">
+        <button class=" logoGreenMedium" (click)="openMoneyModal()">Guthaben aufladen</button>
+      </div>
 
-    <div class="mt-3">
-    <button class=" logoGreenMedium" (click)="openMoneyModal()">Guthaben aufladen</button>
-  </div>
+      <div class="mt-3">
+        <button class=" logoGreenMedium" (click)="logout()">Abmelden</button>
+      </div>
 
-  <div class="mt-3">
-      <button class=" logoGreenMedium" (click)="logout()">Logout</button>
-    </div>
-
-    <div class="mt-3">
-      <button class=" red" (click)="deleteAccount()">Account löschen</button>
+      <div class="mt-3">
+        <button class=" red" (click)="deleteAccount()">Account löschen</button>
+      </div>
     </div>
 
   </div>
