routing to edit tours

--- a/src/app/components/tour-card/tour-card.component.html
+++ b/src/app/components/tour-card/tour-card.component.html
@@ -1,6 +1,6 @@
 
 <div class="card mx-auto border-0 mb-3" style="max-width: 600px">
-  <div class="card-body rounded shadow mt-4 bg-white border-0" (click)="navigateToDetails()">
+  <div class="card-body rounded shadow mt-4 bg-white border-0" (click)="navigateToDetailsOrEdit()">
 
     <div class="container cardio">
       <div class="row">
